Adding tests and fixing bugs found during the exercise

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test:coverage": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
