--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "markdown": "^0.5.0",
     "marksy": "^6.0.3",
     "react": "^16.2.0",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-redux-grid": "^5.5.2",
@@ -38,6 +39,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "flow-bin": "^0.64.0",
     "jest": "^22.1.4",
     "prettier-eslint": "^8.7.6",
     "react-test-renderer": "^16.2.0"
